@@ -1,5 +1,12 @@
 2007-09-23  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-wp-item.c: (gnome_wp_item_free), (gnome_wp_item_dup):
+	* gnome-wp-item.h:
+	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): remove unused imguri property
+	from GnomeWPItem
+
+2007-09-23  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-desktop.c: (wp_drag_received), (wp_drag_get_data),
 	(desktop_init): add support for dragging images from the background list
 	(bug #150544)
